--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Released   : 20130910
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -112,6 +113,7 @@ Released   : 20130910
 	</div>
     -->
 </div>
+<!--
 <div id="footer-wrapper">
 	<div id="footer" class="container">
 		<div class="column1">
@@ -130,6 +132,7 @@ Released   : 20130910
 			<a href="#" class="button">Etiam posuere</a> </div>
 	</div>
 </div>
+-->
 <div id="copyright" class="container">
 	<p>&copy; Harmonious Effects. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
