--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Released   : 20130910
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
+			<a href="https://rendering.documents.cimpress.io/v1/vp/preview?instructions=QSH_JgVgaF6ZmbQvTMzWR%24wMRLAnwkJyoZsZ2tBZmZmlQ2aZmqE9mJXKhs0zNUL1AACE5UNmmZqhmxnayoZsZ2tDZpmalQvUAAKGzTM1CcqE9mJXQ2aZmpUFmZmahmxnayoLMzM1C9QAAhOVBZmZmoT2YlcqE9mJXQWZmZpUL1AACgszMzSoXqAAFBZmZmWBiJYE%24EhOVDPienSobqAAFCW2FmlQ3UAAKF6gABCcqG6gABQz4np5UM%24J6ehuoAASoXqAAFDdQAAhOVCW2FmobqAAElDPienkoXqAAEJyUJbYWaVCW2FmSoXqAACVC9QAAIXW___2yf%24ShumZm0N0zM0t___tk_8n8AAADFSpQuZYraF0BozQn5ZTqFCz__gSZfGh0dHA6Ly91cGxvYWRzLmRvY3VtZW50cy5jaW1wcmVzcy5pby92MS91cGxvYWRzLzRhM2EyYTU4LWExNDUtNDk2Zi05MGM1LTYwZTNjYzk3MDQ3Yn4xMTAvb3JpZ2luYWwvP3RlbmFudD12YnUtY2wmdnBpZD04NjI1MjOwLArafwAAAE_gAAAoVfNHtCtKoYsCwK2n%24HO0xP8Odp6DRkmIqigyXCkG___2yf%240RfQcAAAMCgSk%24WhaFoWhYFgVtP4AAACfwAAAUKvmj2hg7LYWBYFbT_FZX8n%24Kyv9Be8qkVRQZKwIjf__7ZP_aIvoOAAAGBQJScrQtC0LQtC0I2wJ8JCcqGbGdrQWZmZpUNmmZqhPZiVyobNMzVC9QAAhOVDZpmaoZsZ2sqGbGdrQ2aZmpUL1AAChs0zNQnKhPZiV0NmmZqVBZmZmoZsZ2sqCzMzNQvUAAITlQWZmZqE9mJXKhPZiV0FmZmaVC9QAAoLMzM0qF6gABQWZmZlv__8_9bIchbJkJP4AAAA&width=400&height=400&category=lp&merchant_metadata=AB9&shopper_id=6QM4J5E2U316GRO4IM5JW62T4E45F2TI">
 			<h1><a href="#">Harmonious Effects</a></h1>
 		</div>
 		<div id="menu">
@@ -45,7 +46,7 @@ Released   : 20130910
 <div id="banner-wrapper">
 	<div id="banner" class="container">
 		<h2>Remedial & Relaxation Massage</h2>
-		<span>doTerra Wellness Advocate</span> </div>
+	</div>
 </div>
 <div id="wrapper">
 	<div id="page" class="container">
